added matrix to be 1x1 of size, new matrix utility and matrix interface